--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,14 +1,25 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android">
 
+  <uses-feature
+      android:name="android.software.leanback"
+      android:required="false" />
+
+  <uses-feature
+      android:name="android.hardware.touchscreen"
+      android:required="false" />
+
+  <uses-permission android:name="android.permission.INTERNET" />
+  <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
+
   <application
       android:allowBackup="false"
       android:banner="@mipmap/watch_tv"
+      android:hardwareAccelerated="true"
       android:icon="@mipmap/watch_tv"
       android:label="@string/app_name"
       android:supportsRtl="false"
       android:theme="@style/Theme.TV"
-      android:hardwareAccelerated="true"
       android:usesCleartextTraffic="true">
     <activity
         android:name=".MainActivity"
@@ -22,15 +33,5 @@
       </intent-filter>
     </activity>
   </application>
-
-  <uses-feature
-      android:name="android.software.leanback"
-      android:required="false" />
-
-  <uses-feature
-      android:name="android.hardware.touchscreen"
-      android:required="false" />
-
-  <uses-permission android:name="android.permission.INTERNET" />
 
 </manifest>
