--- a/server/src/main/AndroidManifest.xml
+++ b/server/src/main/AndroidManifest.xml
@@ -4,8 +4,8 @@
   <application>
     <service
         android:name="com.wireguard.android.backend.GoBackend$VpnService"
-        android:permission="android.permission.BIND_VPN_SERVICE"
-        android:exported="false">
+        android:exported="false"
+        android:permission="android.permission.BIND_VPN_SERVICE">
       <intent-filter>
         <action android:name="android.net.VpnService" />
       </intent-filter>
