--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,11 +2,11 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android">
 
   <uses-feature
-      android:name="android.software.leanback"
+      android:name="android.hardware.touchscreen"
       android:required="false" />
 
   <uses-feature
-      android:name="android.hardware.touchscreen"
+      android:name="android.software.leanback"
       android:required="false" />
 
   <uses-permission android:name="android.permission.INTERNET" />
@@ -14,10 +14,11 @@
 
   <application
       android:allowBackup="false"
-      android:banner="@mipmap/watch_tv"
+      android:banner="@mipmap/ic_banner"
       android:hardwareAccelerated="true"
       android:icon="@mipmap/watch_tv"
       android:label="@string/app_name"
+      android:logo="@mipmap/watch_tv"
       android:supportsRtl="false"
       android:theme="@style/Theme.TV"
       android:usesCleartextTraffic="true">
